--- a/admin/scss/_preview.scss
+++ b/admin/scss/_preview.scss
@@ -214,6 +214,11 @@
 	height: 100%;
 	width: 100%;
 
+	.cms-preview-overlay {
+		width: 100%;
+		height: 100%;
+	}
+
 	.preview-note {
 		color: #CDD7DC;
 		display: block;
